将数据源修改为远程数据库

--- a/ruoyi-admin/src/main/resources/templates/yk/top_speciality/top_speciality.html
+++ b/ruoyi-admin/src/main/resources/templates/yk/top_speciality/top_speciality.html
@@ -58,6 +58,9 @@
                 {
                     field: 'sale',
                     title: '特产销量'
+                },{
+                    field: 'description',
+                    title: '描述'
                 }]
             };
             $.table.init(options);
