热门特产导出初步完成

--- a/ruoyi-admin/src/main/resources/templates/yk/top_speciality/top_speciality.html
+++ b/ruoyi-admin/src/main/resources/templates/yk/top_speciality/top_speciality.html
@@ -26,6 +26,13 @@
                     </div>
                 </form>
             </div>
+
+            <div class="btn-group-sm" id="toolbar" role="group">
+                <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="yk:top_speciality:export">
+                    <i class="fa fa-download"></i> 导出
+                </a>
+            </div>
+
             <div class="col-sm-12 select-table table-striped">
                 <table id="bootstrap-table"></table>
             </div>
@@ -38,6 +45,7 @@
         $(function() {
             var options = {
                 url: prefix + "/list",
+                exportUrl: prefix + "/export",
                 modalName: "最热特产榜单",
                 columns: [{
                     checkbox: true
@@ -57,10 +65,14 @@
                 },
                 {
                     field: 'sale',
-                    title: '特产销量'
+                    title: '特产销量',
+                    sortable: true,
                 },{
                     field: 'description',
                     title: '描述'
+                },{
+                    field: 'inventory',
+                    title: '库存',
                 }]
             };
             $.table.init(options);
