--- a/ruoyi-admin/src/main/resources/templates/system/user/user.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/user.html
@@ -131,8 +131,7 @@
 		        {
 		            field: 'userId',
 		            title: '用户ID'
-		        },
-		        {
+		        },{
 		            field: 'loginName',
 		            title: '登录名称',
 		            sortable: true
@@ -141,11 +140,7 @@
 		            field: 'userName',
 		            title: '用户名称'
 		        },
-		        {
-		            field: 'dept.deptName',
-		            title: '部门'
-		        },
-		        {
+				{
 		            field: 'email',
 		            title: '邮箱',
 		            visible: false
@@ -153,7 +148,13 @@
 		        {
 		            field: 'phonenumber',
 		            title: '手机'
-		        },
+		        },{
+						field: 'province',
+						title: '省份'
+				},{
+				field: 'money',
+				title: '余额'
+				},
 		        {
 		        	visible: editFlag == 'hidden' ? false : true,
 		        	title: '用户状态',
