隐藏了没实现的功能的按键

--- a/ruoyi-admin/src/main/resources/templates/yk/top_speciality/top_speciality.html
+++ b/ruoyi-admin/src/main/resources/templates/yk/top_speciality/top_speciality.html
@@ -6,26 +6,26 @@
 <body class="gray-bg">
      <div class="container-div">
         <div class="row">
-            <div class="col-sm-12 search-collapse">
-                <form id="formId">
-                    <div class="select-list">
-                        <ul>
-                            <li>
-                                <label>特产名称：</label>
-                                <input type="text" name="specialtyName"/>
-                            </li>
-                            <li>
-                                <label>特产价格：</label>
-                                <input type="text" name="price"/>
-                            </li>
-                            <li>
-                                <label>特产销量：</label>
-                                <input type="text" name="sale"/>
-                            </li>
-                        </ul>
-                    </div>
-                </form>
-            </div>
+<!--            <div class="col-sm-12 search-collapse">-->
+<!--                <form id="formId">-->
+<!--                    <div class="select-list">-->
+<!--                        <ul>-->
+<!--                            <li>-->
+<!--                                <label>特产名称：</label>-->
+<!--                                <input type="text" name="specialtyName"/>-->
+<!--                            </li>-->
+<!--                            <li>-->
+<!--                                <label>特产价格：</label>-->
+<!--                                <input type="text" name="price"/>-->
+<!--                            </li>-->
+<!--                            <li>-->
+<!--                                <label>特产销量：</label>-->
+<!--                                <input type="text" name="sale"/>-->
+<!--                            </li>-->
+<!--                        </ul>-->
+<!--                    </div>-->
+<!--                </form>-->
+<!--            </div>-->
 
             <div class="btn-group-sm" id="toolbar" role="group">
                 <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="yk:top_speciality:export">
