修改了一些对管理员身份的判断函数，同时修改了UserReam的管理员鉴权代码,完善了用户管理的添加功能，新增用户可以以管理员的身份登录并查看页面，取消了后端登录时验证码的鉴别

--- a/ruoyi-admin/src/main/resources/templates/system/user/add.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/add.html
@@ -18,6 +18,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label">省份：</label>
+                        <div class="col-sm-8">
+                            <input name="province" placeholder="请输入所在的省份" class="form-control" type="text" maxlength="30">
+                        </div>
+                    </div>
+                </div>
 <!--                <div class="col-sm-6">-->
 <!--                    <div class="form-group">-->
 <!--                        <label class="col-sm-4 control-label">归属部门：</label>-->
@@ -117,8 +125,9 @@
                     <div class="form-group">
                         <label class="col-xs-2 control-label">角色：</label>
                         <div class="col-xs-10">
-                            <label th:each="role:${roles}" class="check-box">
-								<input name="role" type="checkbox" th:value="${role.roleId}" th:text="${role.roleName}" th:disabled="${role.status == '1'}">
+                            <label id='role_radio' th:each="role:${roles}" class="check-box">
+                                <input name="role" type="radio" th:value="${role.roleId}" th:text="${role.roleName}" th:disabled="${role.status == '1'}" required>
+<!--								<input name="role" type="radio" th:value="${role.roleId}" th:text="${role.roleName}" th:disabled="${role.status == '1'}">-->
 							</label>
                         </div>
                     </div>
@@ -226,7 +235,7 @@
 	        if ($.validate.form() && checkpwd(chrtype, password)) {
 	        	var data = $("#form-user-add").serializeArray();
 	        	var status = $("input[id='status']").is(':checked') == true ? 0 : 1;
-	        	var roleIds = $.form.selectCheckeds("role");
+	        	var roleIds = $('input:radio:checked').val();
 	        	var postIds = $.form.selectSelects("post");
 	        	data.push({"name": "status", "value": status});
 	        	data.push({"name": "roleIds", "value": roleIds});
