--- a/ruoyi-admin/src/main/resources/templates/system/user/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/edit.html
@@ -21,15 +21,23 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="form-group">
-                        <label class="col-sm-4 control-label">归属部门：</label>
+                        <label class="col-sm-4 control-label">省份：</label>
                         <div class="col-sm-8">
-                            <div class="input-group">
-                                <input class="form-control" type="text" name="deptName" onclick="selectDeptTree()" id="treeName" th:field="*{dept.deptName}">
-                            	<span class="input-group-addon"><i class="fa fa-search"></i></span>
-                            </div>
+                            <input name="province" placeholder="请输入所在的省份" class="form-control" type="text" maxlength="30" th:field="*{province}">
                         </div>
                     </div>
                 </div>
+<!--                <div class="col-sm-6">-->
+<!--                    <div class="form-group">-->
+<!--                        <label class="col-sm-4 control-label">归属部门：</label>-->
+<!--                        <div class="col-sm-8">-->
+<!--                            <div class="input-group">-->
+<!--                                <input class="form-control" type="text" name="deptName" onclick="selectDeptTree()" id="treeName" th:field="*{dept.deptName}">-->
+<!--                            	<span class="input-group-addon"><i class="fa fa-search"></i></span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
             <div class="row">
                 <div class="col-sm-6">
@@ -79,14 +87,24 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="form-group">
-                        <label class="col-sm-4 control-label">岗位：</label>
+                        <label class="col-sm-4 control-label">角色：</label>
                         <div class="col-sm-8">
-                            <select id="post" class="form-control select2-multiple" multiple>
-								<option th:each="post:${posts}" th:value="${post.postId}" th:text="${post.postName}" th:selected="${post.flag}" th:disabled="${post.status == '1'}"></option>
-							</select>
+                            <label th:each="role:${roles}" class="check-box">
+                                <input name="role" type="radio" th:value="${role.roleId}" th:text="${role.roleName}" th:checked="${role.flag}" th:disabled="${role.status == '1'}">
+                            </label>
                         </div>
                     </div>
                 </div>
+<!--                <div class="col-sm-6">-->
+<!--                    <div class="form-group">-->
+<!--                        <label class="col-sm-4 control-label">岗位：</label>-->
+<!--                        <div class="col-sm-8">-->
+<!--                            <select id="post" class="form-control select2-multiple" multiple>-->
+<!--								<option th:each="post:${posts}" th:value="${post.postId}" th:text="${post.postName}" th:selected="${post.flag}" th:disabled="${post.status == '1'}"></option>-->
+<!--							</select>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
                 <div class="col-sm-6">
                     <div class="form-group">
                         <label class="col-sm-4 control-label">用户性别：</label>
@@ -101,11 +119,9 @@
             <div class="row">
             	<div class="col-sm-12">
                     <div class="form-group">
-                        <label class="col-xs-2 control-label">角色：</label>
+                        <label class="col-xs-2 control-label">余额：</label>
                         <div class="col-xs-10">
-                            <label th:each="role:${roles}" class="check-box">
-								<input name="role" type="checkbox" th:value="${role.roleId}" th:text="${role.roleName}" th:checked="${role.flag}" th:disabled="${role.status == '1'}">
-							</label>
+                            <input name="money" placeholder="请输入余额" class="form-control" type="text" maxlength="30" th:field="*{money}">
                         </div>
                     </div>
                 </div>
