--- a/ruoyi-admin/src/main/resources/templates/login.html
+++ b/ruoyi-admin/src/main/resources/templates/login.html
@@ -46,16 +46,16 @@
                 <p class="m-t-md"><b>有趣的人生，一半是柴米油盐，一半是山川湖海</b></p>
                 <input type="text"     name="username" class="form-control uname"     placeholder="用户名" value="admin"    />
                 <input type="password" name="password" class="form-control pword"     placeholder="密码"   value="admin123" />
-                <div class="row m-t" th:if="${captchaEnabled==true}">
-                    <div class="col-xs-6">
-                        <input type="text" name="validateCode" class="form-control code" placeholder="验证码" maxlength="5" />
-                    </div>
-                    <div class="col-xs-6">
-                        <a href="javascript:void(0);" title="点击更换验证码">
-                            <img th:src="@{/captcha/captchaImage(type=${captchaType})}" class="imgcode" width="85%"/>
-                        </a>
-                    </div>
-                </div>
+<!--                <div class="row m-t" th:if="${captchaEnabled==true}">-->
+<!--                    <div class="col-xs-6">-->
+<!--                        <input type="text" name="validateCode" class="form-control code" placeholder="验证码" maxlength="5" />-->
+<!--                    </div>-->
+<!--                    <div class="col-xs-6">-->
+<!--                        <a href="javascript:void(0);" title="点击更换验证码">-->
+<!--                            <img th:src="@{/captcha/captchaImage(type=${captchaType})}" class="imgcode" width="85%"/>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                </div>-->
                 <div class="checkbox-custom" th:if="${isRemembered}" th:classappend="${captchaEnabled==false} ? 'm-t'">
                     <input type="checkbox" id="rememberme" name="rememberme"> <label for="rememberme">记住我</label>
                 </div>
