--- a/ruoyi-admin/src/main/resources/templates/system/user/user.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/user.html
@@ -59,6 +59,12 @@
 		            <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="system:user:export">
 			            <i class="fa fa-download"></i> 导出
 			        </a>
+					<a class="btn btn-success" onclick="$.modal.openTab('用户统计', '/system/user/statistics');" shiro:hasPermission="system:user:statistics">
+						<i class="fa fa-plus"></i> 统计
+					</a>
+					<a class="btn btn-success" onclick="window.open('/system/user/print');" shiro:hasPermission="system:user:statistics">
+						<i class="fa fa-plus"></i> 打印
+					</a>
 		        </div>
 		        
 		        <div class="col-sm-12 select-table table-striped">
