完成个人中心的开发（未对原本的头像上传与修改功能做出改动），已增加提交表单后的自动刷新。后端sys_user做了微调，主要体现在增加了money和province的增加，用户管理模块开发时需注意改动并在merge到dev后及时pull。注意：创建用户时务必初始化账户金额(sys_user的money)，否则会出问题。

--- a/ruoyi-admin/src/main/resources/templates/system/user/profile/profile.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/profile/profile.html
@@ -319,15 +319,51 @@
     function submitUserInfo() {
         if ($.validate.form()) {
             console.log($('#input-user-info').serialize())
-            $.operate.saveModal(ctx + "system/user/profile/update", $('#input-user-info').serialize());
+            //$.operate.saveModal(ctx + "system/user/profile/update", $('#input-user-info').serialize());
+            $.ajax({
+                url: ctx + "system/user/profile/update",
+                data: $('#input-user-info').serialize(),
+                type: "post",
+                success: function(result) {
+                    if (result.code == web_status.SUCCESS) {
+                        layer.msg("请稍后……", {
+                            icon: 1,
+                            time: 500,
+                            shade: [0.1, '#8F8F8F']
+                        },function() {
+                            location.reload();
+                        });
+                    } else {
+                        alert(result.msg);
+                    }
+                }
+            })
             $('#updateForm').modal('hide');
         }
     }
 
     function submitUserMoney() {
         if ($.validate.form()) {
-            var cur=$('#input-user-money-form').serialize();
-            $.operate.saveModal(ctx + "system/user/profile/update", $('#input-user-money-form').serialize());
+            //var cur=$('#input-user-money-form').serialize();
+            //$.operate.saveModal(ctx + "system/user/profile/update", $('#input-user-money-form').serialize());
+            $.ajax({
+                url: ctx + "system/user/profile/update",
+                data: $('#input-user-money-form').serialize(),
+                type: "post",
+                success: function(result) {
+                    if (result.code == web_status.SUCCESS) {
+                        layer.msg("请稍后……", {
+                            icon: 1,
+                            time: 500,
+                            shade: [0.1, '#8F8F8F']
+                        },function() {
+                            location.reload();
+                        });
+                    } else {
+                        alert(result.msg);
+                    }
+                }
+            })
             $('#updateMoneyForm').modal('hide');
         }
     }
@@ -382,8 +418,26 @@
         var chrtype = [[${#strings.defaultString(@config.getKey('sys.account.chrtype'), 0)}]];
         var password = $("#newPassword").val();
         if ($.validate.form("input-user-pwd") && checkpwd(chrtype, password)) {
-            $.operate.saveModal(ctx + "system/user/profile/resetPwd", $('#input-user-pwd').serialize());
-
+            //$.operate.saveModal(ctx + "system/user/profile/resetPwd", $('#input-user-pwd').serialize());
+            $.ajax({
+                url: ctx + "system/user/profile/resetPwd",
+                data: $('#input-user-pwd').serialize(),
+                type: "post",
+                success: function(result) {
+                    if (result.code == web_status.SUCCESS) {
+                        layer.msg("请稍后……", {
+                            icon: 1,
+                            time: 500,
+                            shade: [0.1, '#8F8F8F']
+                        },function() {
+                            location.reload();
+                        });
+                    } else {
+                        alert(result.msg);
+                    }
+                }
+            })
+            $('#newPassword').modal('hide');
         }
     }
 
