--- a/ruoyi-admin/src/main/resources/templates/system/buyroom/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/system/buyroom/edit.html
@@ -10,19 +10,20 @@
             <div class="form-group">    
                 <label class="col-sm-3 control-label">民宿ID：</label>
                 <div class="col-sm-8">
-                    <input name="houseId" th:field="*{houseId}" class="form-control" type="text" required disabled>
+                    <input name="houseId" th:field="*{houseId}" class="form-control" type="text" id="houseId" required disabled>
+                    <input name="gg" id="gg">
                 </div>
             </div>
             <div class="form-group">    
                 <label class="col-sm-3 control-label ">房间号：</label>
                 <div class="col-sm-8">
-                    <input name="roomNumber" th:field="*{roomNumber}" class="form-control" type="text" required disabled>
+                    <input name="roomNumber" th:field="*{roomNumber}" class="form-control" type="text" id="roomNumber" required disabled>
                 </div>
             </div>
             <div class="form-group">    
                 <label class="col-sm-3 control-label ">每日价格（￥）：</label>
                 <div class="col-sm-8">
-                    <input name="pricePerDay" th:field="*{pricePerDay}" class="form-control" type="text" required disabled>
+                    <input name="pricePerDay" th:field="*{pricePerDay}" class="form-control" type="text" id="price" required disabled>
                 </div>
             </div>
             <div class="form-group">    
@@ -62,7 +63,7 @@
             </div>
             <div>
                 <p style="text-align: right">
-                    <button th:style="'background:#1E90FF;border-style:none;color:#ffff;border-radius:5px;height:30px;width:50px'" name="dg" id="dg">订购</button>
+                    <button th:style="'background:#1E90FF;border-style:none;color:#ffff;border-radius:5px;height:30px;width:50px'" name="dg" id="dg" onclick="dinggou()">订购</button>
                 </p>
             </div>
         </form>
@@ -123,32 +124,48 @@
 <!--            }-->
 <!--        }-->
 <!--    </script>-->
+
+
+
+<!--    &lt;!&ndash;<script src="../../../static/js/jquery.min.js" type="text/javascript"></script>&ndash;&gt;-->
+    <th:block th:include="include :: footer" />
+    <th:block th:include="include :: summernote-js" />
+    <script th:inline="javascript" >
+        //console.log("uuuuuuuuuuuuiyyyyyyyyiiiii");
+        function dinggou(){
+            console.log('1tttttttttt');
+            var data={};
+            data.houseId=$("#houseId").val();
+            data.roomNumber=$("#roomNumber").val();
+            data.price=$("#price").val();
+            $.ajax({
+                 type: "post",
+                 url: "/system/buyroom/ff",
+                 data:  data,
+                 timeout:500,
+                 success: function(result){
+                     alert("ajax");
+                     console.log(result);
+                     let json = eval( "(" + result + ")" );
+                     console.log(result.result_msg);
+                     //let json = eval( "(" + res + ")" );
+                    if (1){
+                        alert("订购成功");
+                    }else{
+                        alert("订购失败");
+                    }
+                },
+                 error: function (e) {
+                    console.log("failed here");
+                    console.log(e);
+                 }
+            });
+        }
+    </script>
+
+
 </body>
 
-<script type="text/javascript" link rel="stylesheet" src="jquery-1.8.3.min.js">
-
-
-    $("#dg").click(function() {
-        var formData;// = $("#loginForm").serialize();
-        console.log("iiiiiiiiiiiii");
-        //alert(formData);
-        $.ajax({
-            url: "system/buyroom/ff",
-
-            dataType: "json",
-            type: "get",
-            data: formData,
-
-            success: function(result) {  //这里就是我出错的地方
-                alert(result.msg);
-            },
-            error: function(data) {
-                alert("请求出错");
-                alert(data);
-            }
-        });
-    });
-</script>
 
 
 </html>
