--- a/ruoyi-admin/src/main/resources/templates/yk/top_speciality/top_speciality.html
+++ b/ruoyi-admin/src/main/resources/templates/yk/top_speciality/top_speciality.html
@@ -2,6 +2,27 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
     <th:block th:include="include :: header('热门特产榜单')" />
+
+    <style>
+        @media print {
+            .fixed-table-toolbar {
+                display: none;
+            }
+
+            .noprint {
+                display: none;
+            }
+
+            .fixed-table-pagination {
+                display: none !important;
+            }
+
+        }
+        @page {
+            size: auto;
+            margin: 0mm;
+        }
+    </style>
 </head>
 <body class="gray-bg">
      <div class="container-div">
@@ -31,10 +52,13 @@
                 <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="yk:top_speciality:export">
                     <i class="fa fa-download"></i> 导出
                 </a>
+                <a class="btn btn-success" onclick="printHtml();" shiro:hasPermission="system:top_speciality:print">
+                    <i class="fa fa-plus"></i> 打印
+                </a>
             </div>
 
-            <div class="col-sm-12 select-table table-striped">
-                <table id="bootstrap-table"></table>
+            <div class="col-sm-12 select-table table-striped noprint" id="prints" style="width: 100%;">
+                <table id="bootstrap-table" style="width: 100%;word-break:break-all; word-wrap:break-all; "></table>
             </div>
         </div>
     </div>
@@ -47,9 +71,7 @@
                 url: prefix + "/list",
                 exportUrl: prefix + "/export",
                 modalName: "最热特产榜单",
-                columns: [{
-                    checkbox: true
-                },
+                columns: [
                 {
                     field: 'id',
                     title: '特产ID',
@@ -61,7 +83,8 @@
                 },
                 {
                     field: 'price',
-                    title: '特产价格'
+                    title: '特产价格',
+                    sortable: true,
                 },
                 {
                     field: 'sale',
@@ -73,10 +96,17 @@
                 },{
                     field: 'inventory',
                     title: '库存',
+                    sortable: true,
                 }]
             };
             $.table.init(options);
         });
+
+        function printHtml() {
+            $("#prints").removeClass("noprint");
+            window.print();
+            $("#option").addClass("noprint");
+        }
     </script>
 </body>
 </html>
