--- a/ruoyi-admin/src/main/resources/templates/weather/weather/add.html
+++ b/ruoyi-admin/src/main/resources/templates/weather/weather/add.html
@@ -2,6 +2,7 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <th:block th:include="include :: header('新增天气信息')" />
+    <th:block th:include="include :: datetimepicker-css" />
 </head>
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
@@ -18,9 +19,19 @@
                     <input name="temperature" class="form-control" type="text">
                 </div>
             </div>
+            <div class="form-group">    
+                <label class="col-sm-3 control-label">数据收集时间：</label>
+                <div class="col-sm-8">
+                    <div class="input-group date">
+                        <input name="collectTime" class="form-control" placeholder="yyyy-MM-dd" type="text">
+                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                    </div>
+                </div>
+            </div>
         </form>
     </div>
     <th:block th:include="include :: footer" />
+    <th:block th:include="include :: datetimepicker-js" />
     <script th:inline="javascript">
         var prefix = ctx + "weather/weather"
         $("#form-weather-add").validate({
@@ -32,6 +43,12 @@
                 $.operate.save(prefix + "/add", $('#form-weather-add').serialize());
             }
         }
+
+        $("input[name='collectTime']").datetimepicker({
+            format: "yyyy-mm-dd",
+            minView: "month",
+            autoclose: true
+        });
     </script>
 </body>
 </html>
