待办事项差序、登录后显示个人待办；反馈管理差统序、登陆后显示个人信息、多表联查；地图管理待开始

--- a/ruoyi-admin/src/main/resources/templates/usertodolist/todolist/eCharts.html
+++ b/ruoyi-admin/src/main/resources/templates/usertodolist/todolist/eCharts.html
@@ -86,9 +86,10 @@
             type: 'post',
             url: 'eCharts',
             async: false,
+            dataType: 'json',
             success: function(res) {
-                console.log(res);
                 usertodostatuscount = res;
+                console.log("================================="+res);
             }
         });
         var pieChart = echarts.init(document.getElementById("echarts-pie-chart"));
