--- a/ruoyi-admin/src/main/resources/templates/clienthomeorder/homeorder/add.html
+++ b/ruoyi-admin/src/main/resources/templates/clienthomeorder/homeorder/add.html
@@ -8,7 +8,7 @@
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-homeorder-add">
             <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">顾客账号：</label>
+                <label class="col-sm-3 control-label is-required">顾客ID：</label>
                 <div class="col-sm-8">
                     <input name="clientNumber" class="form-control" type="text" required>
                 </div>
