--- a/ruoyi-admin/src/main/resources/templates/clienthomeorder/homeorder/homeorder.html
+++ b/ruoyi-admin/src/main/resources/templates/clienthomeorder/homeorder/homeorder.html
@@ -32,8 +32,10 @@
                     <div class="select-list">
                         <ul>
                             <li>
-                                <label>顾客账号：</label>
-                                <input type="text" name="clientNumber"/>
+                                <label>用户名：</label>
+<!--                                <input type="text" name="userName"/>-->
+<!--                                <input th:value="${@permission.getPrincipalProperty('userName')}">-->
+                                <input type="text" name="${@permission.getPrincipalProperty('userName')}"/>
                             </li>
                             <li>
                                 <label>房间ID：</label>
@@ -86,9 +88,9 @@
 <!--                <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="clienthomeorder:homeorder:add">-->
 <!--                    <i class="fa fa-plus"></i> 添加-->
 <!--                </a>-->
-<!--                <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="clienthomeorder:homeorder:edit">-->
-<!--                    <i class="fa fa-edit"></i> 修改-->
-<!--                </a>-->
+                <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="clienthomeorder:homeorder:edit">
+                    <i class="fa fa-edit"></i> 修改
+                </a>
                 <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="clienthomeorder:homeorder:remove">
                     <i class="fa fa-remove"></i> 删除
                 </a>
@@ -118,6 +120,7 @@
     <script th:inline="javascript">
         var editFlag = [[${@permission.hasPermi('clienthomeorder:homeorder:edit')}]];
         var removeFlag = [[${@permission.hasPermi('clienthomeorder:homeorder:remove')}]];
+        var commentsFlag = [[${@permission.hasPermi('clienthomeorder:homeorder:comment')}]];
         var isPaidDatas = [[${@dict.getType('sys_user_is_paid')}]];
         var isDoneDatas = [[${@dict.getType('sys_user_is_done')}]];
         var prefix = ctx + "clienthomeorder/homeorder";
@@ -128,6 +131,8 @@
                 createUrl: prefix + "/add",
                 updateUrl: prefix + "/edit/{id}",
                 removeUrl: prefix + "/remove",
+                // discussUrl:prefix + "/comment/{id}",
+                discussUrl:prefix + "/comment",
                 exportUrl: prefix + "/export",
                 modalName: "民宿订单",
                 columns: [{
@@ -136,11 +141,16 @@
                 {
                     field: 'id',
                     title: '订单ID',
-                    visible: false
+                    // visible: false
                 },
                 {
                     field: 'clientNumber',
-                    title: '顾客账号'
+                    title: '用户账号',
+                    visible: false
+                },
+                {
+                    field: 'userName',
+                    title: '用户名'
                 },
                 {
                     field: 'roomId',
@@ -187,8 +197,8 @@
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>评价</a> ');
-                        // actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
+                         actions.push('<a class="btn btn-success btn-xs ' + commentsFlag + '" href="javascript:void(0)" onclick="$.operate.comment(\'' + row.id + '\')"><i class="fa fa-add"></i>评价</a> ');
+                         actions.push('<a class="btn btn-danger btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
                         return actions.join('');
                     }
                 }]
