--- a/ruoyi-admin/src/main/resources/templates/yk/top_speciality/top_speciality.html
+++ b/ruoyi-admin/src/main/resources/templates/yk/top_speciality/top_speciality.html
@@ -97,6 +97,12 @@
                     field: 'inventory',
                     title: '库存',
                     sortable: true,
+                },{
+                    field: 'address',
+                    title: '民宿地址',
+                },{
+                    field: 'houseName',
+                    title: '民宿名称',
                 }]
             };
             $.table.init(options);
